// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build-only yarn: build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "YARN_VERSION",
      "buildArgs": Array [],
      "cache": "docker-build-cache",
      "dryRun": undefined,
      "image": "yarn",
      "tag": "1.22.4",
    },
  ],
]
`;

exports[`build-only yarn: publish 1`] = `Array []`;

exports[`last-only dummy: build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "DUMMY_VERSION",
      "buildArgs": Array [
        "IMAGE=slim",
      ],
      "cache": undefined,
      "dryRun": undefined,
      "image": "dummy",
      "tag": "12-slim",
    },
  ],
]
`;

exports[`last-only dummy: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "tag": "12-slim",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "tag": "slim",
    },
  ],
]
`;

exports[`updates image yarn (dry-run): build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "YARN_VERSION",
      "buildArgs": Array [],
      "cache": "docker-build-cache",
      "dryRun": true,
      "image": "yarn",
      "tag": "1.5.0",
    },
  ],
]
`;

exports[`updates image yarn (dry-run): publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": true,
      "image": "yarn",
      "tag": "1.5.0",
    },
  ],
]
`;

exports[`works dummy: build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "DUMMY_VERSION",
      "buildArgs": undefined,
      "cache": undefined,
      "dryRun": undefined,
      "image": "dummy",
      "tag": "10",
    },
  ],
  Array [
    Object {
      "buildArg": "DUMMY_VERSION",
      "buildArgs": undefined,
      "cache": undefined,
      "dryRun": undefined,
      "image": "dummy",
      "tag": "12",
    },
  ],
  Array [
    Object {
      "buildArg": "DUMMY_VERSION",
      "buildArgs": undefined,
      "cache": undefined,
      "dryRun": undefined,
      "image": "dummy",
      "tag": "13",
    },
  ],
]
`;

exports[`works dummy: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "tag": "10",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "tag": "12",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "tag": "latest",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "dummy",
      "tag": "13",
    },
  ],
]
`;

exports[`works pnpm: build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "PNPM_VERSION",
      "buildArgs": Array [],
      "cache": undefined,
      "dryRun": undefined,
      "image": "pnpm",
      "tag": "5.0.0",
    },
  ],
  Array [
    Object {
      "buildArg": "PNPM_VERSION",
      "buildArgs": Array [],
      "cache": undefined,
      "dryRun": undefined,
      "image": "pnpm",
      "tag": "4.0.0-rc.24",
    },
  ],
]
`;

exports[`works pnpm: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "pnpm",
      "tag": "5.0.0",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "pnpm",
      "tag": "latest",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "pnpm",
      "tag": "4.0.0-rc.24",
    },
  ],
]
`;

exports[`works yarn: build 1`] = `
Array [
  Array [
    Object {
      "buildArg": "YARN_VERSION",
      "buildArgs": Array [],
      "cache": "docker-build-cache",
      "dryRun": undefined,
      "image": "yarn",
      "tag": "1.22.4",
    },
  ],
]
`;

exports[`works yarn: publish 1`] = `
Array [
  Array [
    Object {
      "dryRun": undefined,
      "image": "yarn",
      "tag": "1.22.4",
    },
  ],
  Array [
    Object {
      "dryRun": undefined,
      "image": "yarn",
      "tag": "latest",
    },
  ],
]
`;
